<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <TextView
        android:text="@string/detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/username_color"
        android:textSize="@dimen/username_textsize"/>

    <TextView
        android:id="@+id/creatorName"
        android:textSize="@dimen/status_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/detail_create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/username_color"
        android:textSize="@dimen/username_textsize"/>

    <TextView
        android:id="@+id/timeCreated"
        android:textSize="@dimen/status_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/detail_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/username_color"
        android:textSize="@dimen/username_textsize"/>

    <TextView
        android:id="@+id/statusBody"
        android:textSize="@dimen/status_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
